releaseTests/testPath10/expected
../testfiles/testPath/data-specs/TestPath.jml:3: error: cannot find symbol
    //@ requires q; // BAD
                 ^
  symbol:   variable q
  location: class TestPath
1 error
